[package]
name = "jpeg-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
strum = "0.26.2"
strum_macros = "0.26.3"

[[bin]]
name = "jpeg-parser"
path = "main.rs"
